<resources>
    <string name="app_name">Takeaway</string>
    <string name="deep_link_scheme" translatable="false">takeaway</string>
    <string name="deep_link_host" translatable="false">deep.takeaway.com</string>
    <string name="https_scheme" translatable="false">https</string>
    <string name="delivery_free_from_colored">бесплатно от &lt;font color=#FF004C>%1$s ₽&lt;/font></string>
    <string name="takeaway_discount_colored">&lt;font color=#FF004C>-%1$s%%&lt;/font> на самовывоз</string>
    <string name="feed_search_view_title">Поиск заведений</string>
    <string name="empty_search_result">Ничего не найдено =(</string>
    <string name="clear_button_text">Сбросить</string>
    <string name="all_cafe">Все рестораны</string>
    <string name="default_amount">0₽</string>
    <string name="delivery_free_from">бесплатно от %1$s ₽</string>
    <string name="takeaway_discount">-%1$s%% на самовывоз</string>
    <string name="delivery_price">%1$s ₽ при заказе на меньшую сумму</string>
    <string name="minimumDeliverySumText">минимальная сумма доставки — %1$s₽</string>
    <string name="no_internet_dialog_title">Проблемы с интернетом =(</string>
    <string name="no_internet_dialog_message">Отсутствует подключение к интернету. Проверьте соединение и повторите попытку.</string>
    <string name="ok_dialog_button_text">Повторить</string>
    <string name="service_unavailable_dialog_title">Что-то пошло не так…</string>
    <string name="service_unavailable_dialog_message">Сервер не отвечает, повторите попытку или зайдите позже</string>
    <string name="repeat_dialog_button_text">Повторить</string>
    <string name="cancel_dialog_button_text">отмена</string>
    <string name="work_time_text">Часы работы</string>
    <string name="business_time_text">Бизнес-ланч</string>
    <string name="product_price">&lt;font color=#FF004C>%1$s ₽&lt;/font></string>
    <string name="product_weight">%1$s гр.</string>
    <string name="takeaway_description">Бесплатный сервис\nзаказа еды в Томске</string>
    <string name="link_on_statist">Сервис разработан&lt;br/>командой &lt;a href="https://statist-w.ru/">statist&lt;/a></string>
    <string name="to_basket_text">В корзину</string>
    <string name="rubles_postfix">%1$s ₽</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="several_cafe_basket_warning_title">Очистить корзину?</string>
    <string name="several_cafe_basket_warning_message">В корзине уже имеются блюда из другого кафе</string>
    <string name="several_cafe_basket_warning_clear_approve">Очистить</string>
    <string name="several_cafe_basket_warning_cancel_clear">Отменить</string>
    <string name="back_to_cafe_text">К заведению</string>
    <string name="basket_title">Корзина</string>
    <string name="order_title">Ваш заказ</string>
    <string name="empty_basket_title">Корзина пуста</string>
    <string name="product_count">%1$s шт.</string>
    <string name="order_amount_price">Сумма заказа</string>
    <string name="to_order_registration_button_text">Перейти к оформлению</string>
    <string name="message_with_value_to_free_delivery">Для доставки за 0 ₽ закажите еще на %1$s ₽</string>
    <string name="minimum_amount_for_free_delivery_message">Минимальная сумма доставки — %1$s ₽</string>
    <string name="takeaway_discount_calculated">Скидка −%1$s%% на самовывоз составит %2$s ₽</string>
    <string name="delivery_price_calculated_text">Стоимость доставки для данной суммы — %1$s ₽</string>
    <string name="promo_title">Поможем томским\nзаведениям вместе!</string>
    <string name="promo_description">Узнайте, как вы помогаете, совершая заказы через сервис TAKEAWAY</string>
    <string name="motivation_text">Важно понимать, что в текущей экономической ситуации первыми под удар попадают наши любимые кафе, рестораны и бары.&lt;br/>&lt;br/>Единственным способом поддержания деятельности для заведений остаются самовывоз и доставка. Сервис TakeAway помогает вам заказывать любимые блюда быстро и удобно, что позволяет обеспечить заведения дополнительными заказами. Также, мы абсолютно не берем платы за свои услуги с заведений.&lt;br/>&lt;br/>Мы искренне хотим помочь создать любимым местам условия, в которых возможно поддерживать рентабельность, рабочие места и желание радовать нас с вами вкусными блюдами. Именно поэтому, заказывая в TakeAway, вы, прежде всего, помогаете своим любимым заведениям!&lt;br/>&lt;br/>С любовью, &lt;a href="https://statist-w.ru/">команда statist&lt;/a> 💖</string>
    <string name="confirmation_go_to_mail_to_confirm_order_text">Перейдите в почту для его подтверждения</string>
    <string name="confirmation_description">Обычно письмо приходит в течение 5 минут, но если такого не произошло, то проверьте папку «Спам» — скорее всего, оно там.</string>
    <string name="confirmation_back_button_text">Вернуться на главную</string>
    <string name="info_back_button_text">Назад</string>
    <string name="add_new_cafe_toolbar_title">Добавить заведение</string>
    <string name="add_cafe_title">Желаете присоединиться к сервису?\nЗаполните поля ниже.</string>
    <string name="add_cafe_request_button">Оставить заявку</string>
    <string name="add_new_cafe_input_cafe_name_hint">Название заведения</string>
    <string name="add_new_cafe_input_email_hint">E-mail</string>
    <string name="add_new_cafe_input_phone_hint">Телефон</string>
</resources>