<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundUnderCards"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="top"
        android:translationZ="@dimen/z_up"
        app:elevation="@dimen/app_bar_elevation">

        <include
            android:id="@+id/cafeAppbar"
            layout="@layout/cafe_appbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/titleCafeImg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cafe_image_height"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_default_product" />

            <ImageView
                android:id="@+id/cafeLogo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_margin="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_16"
                android:layout_marginBottom="@dimen/spacing_16"
                android:background="@drawable/white_border"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/titleCafeImg"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@color/colorPrimary"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/cafeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_32"
                android:layout_marginEnd="@dimen/spacing_16"
                android:layout_marginBottom="@dimen/spacing_32"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleCafeImg">

                <TextView
                    android:id="@+id/cafeType"
                    style="@style/Text.Body.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Кондитерская" />

                <TextView
                    android:id="@+id/cafeName"
                    style="@style/Text.Title.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Гости" />

                <TextView
                    android:id="@+id/cafeDescription"
                    style="@style/Text.Title.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Мы кафе хорошее и у нас крутое описание" />

                <TextView
                    android:id="@+id/location"
                    style="@style/Text.Title.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="@dimen/spacing_8"
                    tools:text="ул.Ленина 10" />

                <TextView
                    android:id="@+id/time"
                    style="@style/Text.Title.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="@dimen/spacing_8"
                    tools:text="8:00−21:00" />

                <TextView
                    android:id="@+id/timeSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_24"
                    android:text="@string/work_time_text"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/businessTime"
                    style="@style/Text.Title.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_24"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:visibility="gone"
                    tools:text="8:00−21:00"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/businessTimeSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_24"
                    android:text="@string/business_time_text"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/takeawayDiscount"
                    style="@style/Text.Title.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:drawableStart="@drawable/ic_discount"
                    android:drawablePadding="@dimen/spacing_8"
                    android:visibility="gone"
                    tools:text="-20% на самовывоз"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/deliveryFreeFrom"
                    style="@style/Text.Title.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:drawableStart="@drawable/ic_delivery_bag"
                    android:drawablePadding="@dimen/spacing_8"
                    tools:text="бесплатно от 650 рублей" />

                <TextView
                    android:id="@+id/deliveryPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_24"
                    android:visibility="gone"
                    tools:text="150 рублей при заказе на меньшую сумму"
                    tools:visibility="visible" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productListRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_16"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cafeInfo"
                tools:listitem="@layout/product_item" />

            <ImageView
                android:id="@+id/logoFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_48"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_logo_takeaway_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productListRecycler" />

            <TextView
                android:id="@+id/takeawayDescription"
                style="@style/Text.Body.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_16"
                android:text="@string/takeaway_description"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoFooter" />

            <TextView
                android:id="@+id/linkOnStatist"
                style="@style/Text.Body.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_32"
                android:layout_marginEnd="@dimen/spacing_16"
                android:layout_marginBottom="@dimen/spacing_32"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:textAlignment="center"
                android:textColorLink="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeawayDescription"
                tools:text="Сервис разработан Statist" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>